--- a/src/locales/ua/acropolis.json
+++ b/src/locales/ua/acropolis.json
@@ -1,59 +1,59 @@
 {
   "acropolis": {
     "siteMetadata": {
-      "description": "Explore the Acropolis testnet"
+      "description": "Вивчаємо тестнет Acropolis"
     },
     "hero": {
-      "title": "Acropolis Network",
-      "text": "Explore available roles and pick the one that suits you best. Influence the platform's development and earn real money in the process.",
-      "chipText": "What is this?"
+      "title": "Мережа Acropolis",
+      "text": "Вивчи доступні ролі та обери ту, яка пасує тобі найбільше. Впливай на розробку платформи та заробляй реальні гроші в процесі.",
+      "chipText": "Що це?"
     },
     "heroCard": {
-      "title": "REPLACED BY ROME ON"
+      "title": "ЗАМІЩЕНО ROME"
     },
     "modal": {
-      "title": "The Acropolis of Athens",
-      "text": "<0>Known for its great architecture, Acropolis'</0> perhaps most famous building is the Parthenon. It was built to celebrate their victory over Persian invaders, and is today seen as a symbol for democracy and western civilization."
+      "title": "Африканський Акрополіс",
+      "text": "<0> Відомий своєю чудовою архітектурою, Acropolis'</0> можливо, є найзнаменитішою будівлею Парфенону. Він був збудований на честь перемоги над персидськими завойовниками, і сьогодні є символом демократії та західної цивілізації."
     },
     "criticalDocuments": {
-      "title": "Critical Documents",
+      "title": "Важлива документація",
       "fullSpecifications": {
-        "title": "Full Specifications",
-        "text": "Read the specs of the newly implemented features of Acropolis."
+        "title": "Повна сертифікація",
+        "text": "Читай специфікацію нових можливостей Acropolis."
       },
       "releasePlan": {
-        "title": "Release Plan",
-        "text": "Read the release plan as it was made during the planning stage, and learn more about how the development evolved."
+        "title": "Реліз план",
+        "text": "Читай реліз план в тому вигляді, якому він був створений під час планування та дізнавайся, як відбувалась розробка."
       }
     },
     "testnetGoals": {
-      "title": "Testnet Goals",
-      "subtitle": "The goals below are a simplified representation of the Key Results listed in our Release <0>OKR</0>",
+      "title": "Цілі тестнету",
+      "subtitle": "Цілі, викладені нижче - є спрощеним переліком основних результатів нашого релізу <0>OKR</0>",
       "goals": {
         "forum": {
-          "title": "Build and release an on-chain forum",
-          "text": "The final platform will have built in multiple ways of facilitating easy and secure public, and private, communication and information sharing among members. The forum is the first step allowing the platform members to communicate, share ideas and discuss."
+          "title": "Побудова та публікація чейн-форуму",
+          "text": "Остаточна платформа матиме безліч засобів для спрощення безпечного спілкування, включаючи публічне, особисте,  а також можливість ділитись інформацією між членами платформи. Форум буду першим кроком, що дозволить членам платформи спілкуватись, ділитись ідеями та обговорювати."
         },
         "storageNode": {
-          "title": "Rebuild and release the storage node",
-          "text": "Where the old storage node had some bugs making it unable to sync between clients and required a hardcoded liaison, the new storage node is working as intended with no hierarchy or privileges."
+          "title": "Перебудова та випуск вузла зберігання",
+          "text": "В той час, коли старий вузол мав деякі баги, робив синхронізацію між клієнтами не стабільною, мав жорстко закодовані, новий вузол зберігання працює так як треба, без ієрархій та особливих привілеїв."
         },
         "storageProviders": {
-          "title": "Ensure high uptime of storage providers",
-          "text": "Both content creators and consumers user experience depends on various metrics, but perhaps the most important is that the storage node they connect to responds to their request. Whether or not this goal is achieved depends on both the reliability of the software, a good reporting system and corrective actions from multiple parties."
+          "title": "Гарантія високої безперервної роботи провайдерів зберігання.",
+          "text": "На враження від роботи з платформою як творців, так і її споживачів, впливає велика кількість параметрів, найважливішим є те, який вузол зберігання відповідає на запит. Чи буде досягнуто цілі, залежить від надійності програмного забезпечення, гарної системи сповіщень та звітності, а також злагоджених дій по коригування з кількох сторін."
         },
         "tranches": {
-          "title": "Build the storage node with \"tranches\"",
-          "text": "Although the content directory is currently small, at some point it's not feasible to expect all storage providers to have full replication of all the content. Tranches would allow storage providers to select a subset of the content directory, suitable to their capabilities."
+          "title": "Побудова вузла зберігання на \"траншах\"",
+          "text": "Незважаючи на те, що тека з контентом, на разі мала, в якийсь момент буде нереальнім очікувати, що у всіх постачальників зберігання буде знаходитись повна копія всього контенту.  Транші дозволять постачальникам послуг зберігання обрати той набір тек з особистими даними, що відповідає їх можливостям."
         }
       }
     },
     "roles": {
-      "title": "Roles available on the Acropolis testnet"
+      "title": "Спонсоровані ролі у тестнеті Acropolis"
     },
     "map": {
-      "title": "Acropolis of Athens",
-      "text": "<0>The Acropolis is a citadel on a hill in the heart of Athens.</0> It was also at the heart of Ancient Greece, a powerful civilization and empire. Acropolis is famous for its ancient buildings, architecture, historical significance and is one of the main tourist attractions of Athens. It is on UNESCOs list \"World Heritage Sites\".<1/><1/> We chose the name as we had to scale back our ambitions for the next testnet after some issues with the release of Athens. Thus, Acropolis can be considered a sub-release, despite including some new features not intended for Athens. <1/><1/> <2><0/> Explore previous testnet</2>"
+      "title": "Афінський Акрополіс",
+      "text": "<0> Акрополь - це цитадель на пагорбі в самому серці Афін. </0> Він також знаходився у самому серці Стародавньої Греції, могутньої цивілізації та імперії. Акрополь відомий своїми стародавніми будівлями, архітектурою, історичним значенням, а також є однією з головних туристичних пам'яток Афін. Він знаходиться  в списку  UNESCO \"Об'єкти Всесвітньої спадщини \". <1/> <1/> Ми обрали назву, так як нам довелось зменшити наші амбіції по відношенню до наступного теснету після деяких проблем  з випуском Athens. Таким чином, Acropolis можна вважати додатковим випуском, незважаючи на те, що до нього включені деякі нові функції, не передбачені для Афін. <1/><1/> <2><0/> Вивчити попередній тестнет</2> "
     }
   }
 }
