--- a/src/locales/ua/constantinople.json
+++ b/src/locales/ua/constantinople.json
@@ -1,51 +1,51 @@
 {
   "constantinople": {
     "siteMetadata": {
-      "description": "Explore the Constantinople testnet"
+      "description": "Вивчаємо тестнет Constantinople"
     },
     "hero": {
-      "title": "Constantinople Network",
-      "text": "The Constantinople testnet introduces an improved proposals system and fiat-backed token model for participant compensation.",
-      "chipText": "What is this?"
+      "title": "Мережа Constantinople",
+      "text": "Тестнет Constantinople представляє собою поліпшену систему внесення пропозицій, а також модель токенів, підтримуваних фіатними засобами, для виплат учасникам.",
+      "chipText": "Що це?"
     },
     "heroCard": {
-      "title": "REPLACED BY ALEXANDRIA ON"
+      "title": "ЗАМІЩЕНО ALEXANDRIA "
     },
     "modal": {
-      "title": "Constantinople",
-      "text": "The Column of Constantine, also known as the Burnt Stone or the Burnt Pillar, is a Roman monumental column constructed on the orders of the Roman emperor Constantine the Great in 330 AD. It commemorates the declaration of Byzantium as the new capital city of the Roman Empire."
+      "title": "Константинополь",
+      "text": "Колона Костянтина, також відома як Спалений камінь або Спалений стовп, являє собою римську монументальну колону, побудовану за наказом римського імператора Костянтина Великого в 330 році н.е. Зведена на честь проголошення Візантії новою столицею Римської імперії."
     },
     "criticalDocuments": {
-      "title": "Critical Documents",
+      "title": "Важлива документація",
       "releasePlan": {
-        "title": "Release Plan",
-        "text": "Read the release plan as it was made during the planning stage, and learn more about how the development evolved."
+        "title": "Реліз план",
+        "text": "Читай реліз план в тому вигляді, якому він був створений під час планування та дізнавайся, як відбувалась розробка."
       },
       "blogPost": {
-        "title": "Announcement Blog Post",
-        "text": "Read a brief primer on the Constantinople testnet and its objectives."
+        "title": "Оголошення в блозі",
+        "text": "Читай інструкцію до тестнету Constantinople та його цілей."
       }
     },
     "testnetGoals": {
-      "title": "Testnet Goals",
-      "subtitle": "The goals listed below are a simplified representation of our main objectives for the Constantinople testnet.",
+      "title": "Цілі тестнету",
+      "subtitle": "Цілі, викладені нижче - є спрощеним переліком основних результатів тестнету Constantinople.",
       "goals": {
         "proposalSystem": {
-          "title": "Launch a new proposal system",
-          "text": "The constantinople testnet is built around the introduction of a proposal system that strengthens the governance structure of the platform, shifting the day to day responsibility of monitoring the network and allocating resources to voters and the council."
+          "title": "Запуск нової системи пропозицій",
+          "text": "Тестнет Constantinople побудований на впровадженні системи пропозицій, яка укріплює структуру управління платформою, перекладаючи повсякденну відповідальність за моніторинг мережі і виділення ресурсів на виборців і раду."
         },
         "tokenModel": {
-          "title": "Introduce a fiat-backed token model",
-          "text": "Constantinople introduces a new incentive structure, with a fiat (USD) pool backing the testnet tokens, setting up a more realistic economic system for the platform."
+          "title": "Впровадження моделі токенів, забезпечених фіатом",
+          "text": "Constantinople вводить нову структуру стимулів, з пулом фіатних грошей (USD), підтримує токени тестнета, що створює більш реалістичну економічну систему платформи."
         }
       }
     },
     "roles": {
-      "title": "Incentivized Roles for the Constantinople Network"
+      "title": "Спонсоровані ролі в мережі Constantinople"
     },
     "map": {
-      "title": "Constantinople",
-      "text": "<0>Constantinople was the capital city of the Eastern Roman Empire during the fourth century.</0> It was famed for its massive and complex defences as well as its architectural masterpieces and opulent aristocratic palaces. As was the case with the city, we hope our Constantinople testnet will be a worthy successor to Rome.<1/><1/><2><0/> Read the blog post</2>"
+      "title": "Константинополь",
+      "text": "<0>Константинополь був столицею Східної Римської імперії в 4-му столітті н.е.</0> Він славився своєю масивною і складною системою оборони, а також своїми архітектурними шедеврами і розкішними палацами аристократії. Як і у випадку з містом, ми сподіваємося, що наша тестова мережа Константинополь стане гідним наступником Риму (Rome).<1/><1/><2><0/> Читати повідомлення в блозі</2>"
     }
   }
 }
