--- a/src/locales/ua/sparta.json
+++ b/src/locales/ua/sparta.json
@@ -1,41 +1,41 @@
 {
   "sparta": {
     "siteMetadata": {
-      "description": "Explore the Sparta testnet"
+      "description": "Вивчаємо тестнет Sparta"
     },
     "hero": {
-      "title": "Sparta Network",
-      "text": "Explore available roles and pick the one that suits you best. Influence the platform's development and earn real money in the process.",
-      "chipText": "What is this?"
+      "title": "Мережа Sparta",
+      "text": "Вивчай доступні варіанти участі та обирай ті, які тобі найбільше підходять. Впливай на розвиток платформи і заробляй при цьому реальні гроші.",
+      "chipText": "Що це?"
     },
     "heroCard": {
-      "title": "NETWORK DOWN",
-      "markdown": "\n ### FAILURE IDENTIFIED\n\n  On Friday the 29th of March, the Sparta network went down due to a [known bug in substrate](https://github.com/paritytech/substrate/pull/2130) that we had not pulled down before release.\n\n  More details can be found in this [blog post](https://blog.joystream.org/sparta-sacked/)."
+      "title": "ВІДМОВА МЕРЕЖІ",
+      "markdown": "\n ### ВИЯВЛЕНО ПРОБЛЕМУ\n\n  У п'ятницю, 29 березня, мережа Sparta вийшла з ладу через [відому помилку в Substrate](https://github.com/paritytech/substrate/pull/2130) яку ми не врахували перед випуском.\n\n  Детальна інформація [повідомлення в блозі](https://blog.joystream.org/sparta-sacked/)."
     },
     "modal": {
-      "title": "Helmet of Sparta",
-      "text": "<0>The Spartan army helmet</0> represents what Sparta is most known for today, their military might. For it's time, it was also known for its advanced governance system."
+      "title": "Шолом Спарти",
+      "text": "<0>Шолом армії Спарти </ 0> уособлює те, чим найбільш відома сьогодні Спарта, їх військову міць. Для свого часу вони також були відомі своєю передовою системою управління."
     },
     "testnetGoals": {
-      "title": "Testnet Goals",
-      "subtitle": "The goals below are a simplified representation of the Key Results listed in our release OKR.",
+      "title": "Цілі тестнету",
+      "subtitle": "Наведені нижче цілі представляють собою спрощене уявлення ключових результатів, перерахованих в нашому релізі OKR.",
       "goals": {
         "blockchain": {
-          "title": "Build and release a blockchain with a working Council",
-          "text": "As a \"user governed media platform\", allowing users to elect <0>Council Members</0> to represent their interest in day-to-day operations was a major goal for us."
+          "title": "Побудова і випуск блокчейн з робочою радою",
+          "text": "В якості \"медіа-платформи, керованої користувачами \", наша головна мета - надати користувачам можливості обирати <0> членів Ради </ 0> для представлення їх інтересів в повсякденних операціях."
         },
         "bugs": {
-          "title": "Keep the quantity of more or less critical bugs at an acceptable level",
-          "text": "As demonstrated by the fact that the network crashed, we did not reach our goals in this case."
+          "title": "Підтримка критичних помилок на, відносно, прийнятному рівні",
+          "text": "Як показує факт, що наша мережа вийшла з ладу, ми не досягли нашої мети."
         }
       }
     },
     "roles": {
-      "title": "Roles available on the Sparta testnet"
+      "title": "Спонсоровані ролі в мережі Sparta"
     },
     "map": {
-      "title": "The city of Sparta",
-      "text": "<0>Sparta was a prominent city-state in Ancient Greece.</0> In addition to its military might, it was also unique both for its time and compared to its greek rivals due its defined social system and constitution. <1/><1/> We chose the name Sparta due to it's historical significance in the path towards democracy and rule of law, however draconian by modern standard."
+      "title": "Місто Sparta",
+      "text": "<0>Спарта була великим містом-державою в Стародавній Греції. </ 0> Крім своєї військової потужності, воно було унікальним як для свого часу, і перевершувало своїх грецьких суперників завдяки своїй унікальній соціальній системі і конституції. <1 /> <1 /> Ми обрали назву \"Спарта \" через його історичне значення на шляху до демократії та верховенства закону, яким би суворим за сучасними мірками воно не було."
     }
   }
 }
