Add ability to add more scoring periods, add summary tab, other small changes

--- a/src/locales/en/founding-members.json
+++ b/src/locales/en/founding-members.json
@@ -117,10 +117,10 @@
       },
       "title": "Submit activity summary",
       "progressItem": {
-        "accountInfo": "Account info",
+        "accountInfo": "Account",
         "keyFile": "Key file",
         "summary": "Summary",
-        "acceptTerms": "Accept terms & conditions",
+        "acceptTerms": "Terms & conditions",
         "acceptTermsShort": "Terms & cond."
       },
       "membership": {
